--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Jubilee Austin | Developper</title>
+        <title>Jubilee Austin | A Brand New Developper</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet"  href="css/normalize.css">
         <link rel="stylesheet"  href="css/main.css">
